feat(api): update filter chain configuration